Add generated gin server
