# internal/ports/openapi_types.gen.go
@@ -1,0 +1,65 @@
+// Package ports provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
+package ports
+
+import (
+	"time"
+
+	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
+)
+
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
+
+// Error defines model for Error.
+type Error struct {
+	Message string `json:"message"`
+	Slug    string `json:"slug"`
+}
+
+// PostReception defines model for PostReception.
+type PostReception struct {
+	GrapeType     string              `json:"grapeType"`
+	GrapeTypeUuid openapi_types.UUID  `json:"grapeTypeUuid"`
+	Sugar         int32               `json:"sugar"`
+	Truck         string              `json:"truck"`
+	TruckUuid     openapi_types.UUID  `json:"truckUuid"`
+	Vineyard      string              `json:"vineyard"`
+	VineyardkUuid *openapi_types.UUID `json:"vineyardkUuid,omitempty"`
+	Weight        int32               `json:"weight"`
+}
+
+// Reception defines model for Reception.
+type Reception struct {
+	EndTime       *time.Time         `json:"endTime,omitempty"`
+	GrapeType     string             `json:"grapeType"`
+	GrapeTypeUuid openapi_types.UUID `json:"grapeTypeUuid"`
+	Hash          *string            `json:"hash,omitempty"`
+	StartTime     time.Time          `json:"startTime"`
+	Sugar         int32              `json:"sugar"`
+	Transaction   *string            `json:"transaction,omitempty"`
+	Truck         string             `json:"truck"`
+	TruckUuid     openapi_types.UUID `json:"truckUuid"`
+	Uuid          openapi_types.UUID `json:"uuid"`
+	Vineyard      string             `json:"vineyard"`
+	VineyardUuid  openapi_types.UUID `json:"vineyardUuid"`
+	Weight        int32              `json:"weight"`
+}
+
+// Receptions defines model for Receptions.
+type Receptions struct {
+	Receptions []Reception `json:"receptions"`
+}
+
+// Status defines model for Status.
+type Status struct {
+	Message string `json:"message"`
+}
+
+// RegisterReceptionJSONBody defines parameters for RegisterReception.
+type RegisterReceptionJSONBody = PostReception
+
+// RegisterReceptionJSONRequestBody defines body for RegisterReception for application/json ContentType.
+type RegisterReceptionJSONRequestBody = RegisterReceptionJSONBody
